--- a/product_detail.html
+++ b/product_detail.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+      rel="stylesheet"
+    />
     <title>Product | ProteinMirror</title>
 
     <!-- Tailwind -->
@@ -16,13 +20,16 @@
     <!-- APP WRAPPER -->
     <div class="app h-full overflow-y-auto pb-24">
       <!-- HEADER -->
-      <header class="flex items-center px-4 py-4">
-        <button
-          onclick="history.back()"
-          class="text-sm text-yellow-400 font-medium"
-        >
-          ← Terug
+      <!-- HEADER -->
+      <header
+        class="sticky top-0 z-20 flex items-center gap-3 bg-white px-4 py-3 shadow-sm border-b border-slate-200"
+      >
+        <button onclick="history.back()" class="text-slate-600">
+          <span class="material-symbols-outlined">arrow_back</span>
         </button>
+        <span id="headerTitle" class="font-bold text-slate-900 truncate">
+          Product
+        </span>
       </header>
 
       <!-- CONTENT -->
@@ -42,11 +49,9 @@
 
             <!-- PRIJS OVERLAY -->
             <div
-              class="absolute bottom-2 right-2 bg-[#2D4559]/90 text-yellow-400 text-sm font-semibold px-3 py-1 rounded-lg"
               id="productPrice"
-            >
-              –
-            </div>
+              class="absolute bottom-2 right-2 bg-[#2D4559]/90 text-white-400 text-sm font-semibold px-3 py-1 rounded-lg"
+            ></div>
           </div>
 
           <!-- TITEL -->
