--- a/Zoekpagina.html
+++ b/Zoekpagina.html
@@ -147,13 +147,13 @@
             <span class="text-xs font-medium">Vergelijken</span>
           </a>
 
-          <!-- Favourite -->
+          <!-- Account -->
           <a
-            href="#"
+            href="Account.html"
             class="flex flex-col items-center justify-center gap-1 flex-1 h-full text-slate-400 dark:text-slate-500 hover:text-slate-600 dark:hover:text-slate-300 transition-colors"
           >
-            <span class="material-symbols-outlined text-[28px]">favorite</span>
-            <span class="text-xs font-medium">Favorieten</span>
+            <span class="material-symbols-outlined text-[28px]">person</span>
+            <span class="text-xs font-medium">Account</span>
           </a>
         </div>
       </nav>
